--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgnlq_Nhs5pLpA0VKt-5TPLurD1rM53hXMWj7E8Z6OWw1PiSq0yNgjVQuV9XVO08i6DInWcMnDXQ3gYcMyLqm1KaEKzzYTvORjV6QaxDwkoiAsBV4rH4RplSYK5SMrCoKLZudM0t5V_W5YhKmp8R-_d0RMHiUQ6MPRjUismmXKbAlo7LCb84dhvbkCMIg/s400/p3%20(1).jpg" alt="Post2 Image" style="width:100%" class="w3-hover-opacity">
+      <img src="Picture/pc2.jpg" alt="Post2 Image" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Lorem Ipsum</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="Picture/lights.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Picture/pc3.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Lorem Ipsum</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
@@ -85,21 +85,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="Picture/p1.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Picture/p4.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Lorem Ipsum</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="Picture/p2.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Picture/p5.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Lorem Ipsum</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhtwctmPD_ZxiKcmpcl6KjP1oAngi0gv-D62pRaZoU-4lRTV9tNwzrbzXcSVptteKV5SpQXO7AuKNGzDipyW-L1te_6O9_99OD-yETAQciKnKfvRIzu9AIEqcO5bgXeeX71RCYIjyCkH81iUuEWdNUXIgpKnEFSKY8UgJbfRFWxIJjRtiHyJFvjjzsCfA/s600/nature%20(1).jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Picture/pc6.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Lorem Ipsum</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
